<?xml version="1.0"?>
<package>
  <name>blocky_sim</name>
  <version>0.0.1</version>
  <description>The blocky_sim package</description>
  <author email="u3243222@uni.canberra.edu.au">Ben Worth</author>

  <maintainer email="u3243222@uni.canberra.edu.au">Ben Worth</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>


</package>
